--- a/src/components/product-card/product-card.css
+++ b/src/components/product-card/product-card.css
@@ -144,3 +144,10 @@
     border-color: var(--theme-color);
     color: var(--white-color);
 }
+
+@media (max-width:1200px) {
+    .content-image,
+    .product .product-card {
+        height: auto;
+    }
+}
