--- a/src/screens/selling-products/selling-products.css
+++ b/src/screens/selling-products/selling-products.css
@@ -33,6 +33,7 @@
     background: linear-gradient(111.49deg, rgba(255, 255, 255, 0.4) -8.95%, rgba(255, 255, 255, 0.01) 114%);
     backdrop-filter: blur(32px);
     text-align: center;
+    font-family: var(--font_p-medium);
 }
 
 .collections-content h4 {
