--- a/src/screens/subscribe/subscribe.css
+++ b/src/screens/subscribe/subscribe.css
@@ -8,7 +8,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
-    padding: 50px 0px;
+    padding: 50px 20px;
     text-align: center;
 }
 
@@ -17,10 +17,8 @@
 }
 
 .subscribe-content h3 {
-    font-size: 35px;
     color: var(--white-color);
     font-family: var(--font_p-medium);
-    font-weight: 600;
     font-size: 36px;
 }
 
@@ -65,4 +63,20 @@
 .subscribe-box form .btn:active {
     background-color: var(--white-color);
     color: var(--theme-color);
+}
+
+@media (max-width:1199px) {
+    .subscribe-content h3 br{
+     display: none;
+    }
+}
+@media (max-width:767px) {
+    .subscribe-content h3 {
+        font-size: 28px;
+    }
+}
+@media (max-width:360px) {
+    .subscribe-content h3 {
+        font-size: 20px;
+    }
 }
